wyświetlanie w polach na ekranie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">WiFiTesting</string>
     <string name="scan">Scan</string>
+    <string name="level_label">Level:</string>
+    <string name="distance_label">Distance:</string>
+    <string name="read_label">Read no.:</string>
 </resources>
